--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
-  "name": "electro-integrity",
+  "name": "olcan-construction",
   "version": "1.0.0",
-  "description": "Welcome to Electro Integrity",
+  "description": "Welcome to Olcan Construction",
   "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "scripts": {
     "start": "gulp",
     "start:prod": "gulp prod",
@@ -13,8 +10,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "Electro",
-    "Integrity",
+    "Olcan",
+    "Construction",
     "Electrician",
     "Contractor"
   ],
@@ -35,13 +32,11 @@
     "eslint": "^5.7.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^6.0.0",
-    "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.3",
-    "gulp-imagemin": "^4.1.0",
+    "gulp-imagemin": "4.1.0",
     "gulp-nodemon": "^2.2.1",
     "gulp-rename": "^1.4.0",
     "gulp-uglify": "^3.0.1",
-    "gulp-util": "^3.0.8",
     "run-sequence": "^2.2.1"
   }
 }
